--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "orm-sequelize",
   "version": "1.0.0",
   "description": "Aprendendo a utilizar o Sequelize com Express.",
-  "main": "index.js",
+  "main": "./api/index.js",
   "scripts": {
-    
+    "start": "nodemon ./api/index.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.3.5"
+    "path": "^0.12.7",
+    "sequelize": "^6.3.5",
+    "sequelize-cli": "^6.2.0"
   }
 }
