--- a/api/config/config.json
+++ b/api/config/config.json
@@ -4,7 +4,8 @@
     "password": "fr1tt800",
     "database": "escola_ingles",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "port": "3307"
   },
   "test": {
     "username": "root",
